@@ -69,12 +69,14 @@ xine-lib (1.1.90) (Unreleased)
     colour controls, zooming, colour keying.
 
 xine-lib (1.1.17) 2009-??-??
-  * Enable libmpeg2new. This is not yet production code; the old mpeg2
-    decoder remains the default.
+  * Enable libmpeg2new (if configured with --enable-libmpeg2new).
+    This is not yet production code; the old mpeg2 decoder remains the default.
   * Add support for OpenBSD.
   * Fix a build failure on *BSD due to some rather useful GNUisms.
   * Protect audio loop so it cannot write to a paused device (fix
     pause/resume freeze with pulseaudio).
+  * Fix build with libavutil >= 50.0.0.
+  * Fix segfaults when playing VCDs.
 
 xine-lib (1.1.16.2) 2009-02-10
   * Build fixes related to ImageMagick 6.4 & later.
